--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,10 @@ matplotlib-inline==0.1.7
 numpy==1.26.4
 pandas==2.2.2
 pyarrow==17.0.0
-scikit-learn==1.5.1
+scikit-learn==1.4.0
 scipy==1.14.0
+tensorflow==2.17.0
+transformers==4.44.2
+tf-keras==2.17.0
+lightgbm==4.5.0
+keras
