--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ scikit-learn==1.4.0
 scipy==1.14.0
 tensorflow==2.17.0
 transformers==4.44.2
-tf-keras==2.17.0
+# tf-keras==2.17.0
 lightgbm==4.5.0
 keras
